deploymentCommentaire.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beehive-lodge-commentaire
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beehivelodge-commentaire
  template:
    metadata:
      labels:
        app: beehivelodge-commentaire
    spec:
      containers:
        - name: beehive-lodge-commentaire
          image: malekch10/commentaireservice
          ports:
            - containerPort: 8002






---
apiVersion: v1
kind: Service
metadata:
  name: beehivelodge-commentaire  # Changed the name to follow DNS-1035 rules
spec:
  selector:
    app: beehivelodge-commentaire  # Updated selector to match the new labels
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8002
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beehivelodge-commentaire-ingress  # Updated ingress name
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: beehivelodge.commentaire.dpc.com.tn  # Fixed typo here
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beehivelodge-commentaire  # Fixed service name
                port:
                  number: 80
  tls:
    - hosts:
        - beehivelodge.commentaire.dpc.com.tn  # Fixed typo here
      secretName: beelodge-commentaire-tls-secret
