deploymentGateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beehive-lodge-gateway
  namespace: beehive-lodge-pfe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beehive-lodge-gateway
  template:
    metadata:
      labels:
        app: beehive-lodge-gateway
    spec:
      containers:
        - name: beehive-lodge-gateway
          image: depot.dpc.com.tn:8443/beehive_lodge/gateway:v-0.0.122
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: beehive-lodge-gateway
spec:
  selector:
    app: beehive-lodge-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beehive-lodge-gateway-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: beehivelodge.gateway.dpc.com.tn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beehive-lodge-gateway
                port:
                  number: 80
  tls:
    - hosts:
        - beehivelodge.gateway.dpc.com.tn
      secretName: beehive-lodge-gateway-tls-secret
