deploymentUser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beehive-lodge-userservice
  namespace: beehive-lodge-pfe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beehive-lodge-userservice
  template:
    metadata:
      labels:
        app: beehive-lodge-userservice
    spec:
      containers:
        - name: beehive-lodge-userservice
          image: depot.dpc.com.tn:8443/beehive_lodge/user:v-0.0.122
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: beehivelodge-userservice
  namespace: beehive-lodge-pfe
spec:
  selector:
    app: beehive-lodge-userservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beehivelodge-userservice-ingress
  namespace: beehive-lodge-pfe
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: beehivelodge.userservice.dpc.com.tn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beehivelodge-userservice
                port:
                  number: 80
  tls:
    - hosts:
        - beehivelodge.userservice.dpc.com.tn
      secretName: beehive-lodge-userservice-tls-secret
